--- a/MysqlLearning/src/main/resources/application.properties
+++ b/MysqlLearning/src/main/resources/application.properties
@@ -6,3 +6,9 @@ type=com.alibaba.druid.pool.DruidDataSource
 spring.thymeleaf.cache=false
 #??mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+## pagehelper??????
+#pagehelper.helperDialect=mysql
+#pagehelper.reasonable=true
+#pagehelper.supportMethodsArguments=true
+#pagehelper.params=count=countSql
